exports[`analysis rest endpoint should add model 1`] = `
Array [
  Object {
    "__v": 0,
    "name": "test-analysis",
    "trips": Array [],
  },
]
`;

exports[`analysis rest endpoint should get model 1`] = `
Object {
  "__v": 0,
  "name": "test-analysis",
  "trips": Array [],
}
`;
